# upbit-auto

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
config/: example.toml
docs/: README.md
specs/001-upbit-auto-trading/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-upbit-auto-trading/contracts/: backtest.md  fetch.md  report.md  trade.md
src/ua/: __main__.py  config.py  logging.py
src/ua/broker/: errors.py  upbit.py
src/ua/data/: aggregator.py  simulate.py  upbit.py
src/ua/engine/: backtest.py  common.py  paper.py
src/ua/live/: portfolio_ws.py  ws_loop.py
src/ua/reporting/: report.py
src/ua/strategy/: base.py  indicators.py  params.py
src/ua/strategy/composites/: regime_router.py  regime_router_5m_btc.py
src/ua/strategy/examples/: bb_rsi.py  ema_rsi.py  macd_vwap.py  sma_cross.py
tests/integration/: test_backtest_determinism.py  test_risk_limits.py
tests/unit/: test_config_precedence.py
tools/: bb_width_distribution.py  compare_router_children.py  gen-lock.sh  run_router_variant.py  sweep_models.py  sweep_range_tuning.py  sweep_regime_router.py
